# WilliamsCRC

./: .gitignore  CMakeLists.txt  FAQ.md  INSTALL.md  LICENSE  TODO.md  WilliamsCRC.dsw  WilliamsCRC.vc10.sln  WilliamsCRC.vc16.sln  WilliamsCRC.vc9.sln  build_cmake.sh  clean_cmake.sh  prepare_cmake.sh  remove_cmake_artefacts.sh  run_all_scratch_tests.sh  run_all_unit_tests.sh
cmake/: BuildType.cmake  TargetMacros.cmake
examples/: CMakeLists.txt
include/WilliamsCRC/: WilliamsCRC.h  implicit_link.h
projects/core/vc10/: WilliamsCRC.vcxproj  WilliamsCRC.vcxproj.filters
projects/core/vc16/: WilliamsCRC.vcxproj
projects/core/vc6/: WilliamsCRC.dsp
projects/core/vc9/: WilliamsCRC.vcproj
src/: CMakeLists.txt  WilliamsCRC.cpp
src/wcrc/: crcmodel.c  crcmodel.h  stdafx.h
test/: CMakeLists.txt
test/scratch/: CMakeLists.txt
test/scratch/test.scratch.file_checksum/: CMakeLists.txt  implicit_link.cpp  test.scratch.file_checksum.cpp
test/scratch/test.scratch.file_checksum/vc10/: test.scratch.file_checksum.vcxproj  test.scratch.file_checksum.vcxproj.filters
test/scratch/test.scratch.file_checksum/vc16/: test.scratch.file_checksum.vcxproj
test/scratch/test.scratch.versions/: CMakeLists.txt  test.scratch.versions.c
vc10/: WilliamsCRC.vcxproj
vc16/: WilliamsCRC.vcxproj  WilliamsCRC.vcxproj.filters
vc6/: WilliamsCRC.dsp
vc9/: WilliamsCRC.vcproj
wcrc/: crcmodel.cpp  crcmodel.h  crctable.cpp
